spacing issues

--- a/styleA.css
+++ b/styleA.css
@@ -6,3 +6,8 @@ body {
 	font: 13px Arial;
 	line-height: 1.42857143;
 }
+
+
+ul, ol {
+	list-style-position: outside;	
+}
